--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="theme-color" content="#18bc9c">
+    <link rel="icon" sizes="192x192" href="img/profile.png">
 
     <title>Kevin Borrill</title>
 
