--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </a>
             </div>
             <div class="col-sm-4 portfolio-item">
-              <a href="http://kev2480.github.io/Socket-Chat-Example/" target="_blank" >
+              <a href="https://github.com/kev2480/Socket-Chat-Example" target="_blank" >
                 <img src="img/portfolio/nodejs.png" class="img-responsive img-rounded swing" alt="Socket.io and Node.js chat">
                 <h3> Node.js / Socket.io Chat application </h3>
               </a>
