--- a/index.html
+++ b/index.html
@@ -141,12 +141,9 @@
         </div><!-- Row -->
 
         <div class="row">
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-sm-8 portfolio-item">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 
-          </div>
-          <div class="col-sm-4 portfolio-item">
-b
           </div>
           <div class="col-sm-4 portfolio-item">
             <a class="twitter-timeline" href="https://twitter.com/kev2480" data-widget-id="722421660863852545">Tweets by @kev2480</a>
@@ -167,27 +164,31 @@ b
       <footer class="text-center">
         <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-6">
+                    <div class="footer-col col-md-4">
                         <h3>Location</h3>
                         <p>UK, South Coast<br>Poole - Bournemouth - Winchester</p>
                     </div>
-                    <div class="footer-col col-md-6">
+                    <div class="footer-col col-md-4">
+                        <h3>Contact</h3>
+                        <p>Email: kevinborrill@hotmail.com</p>
+                    </div>
+                    <div class="footer-col col-md-4">
                         <h3>Find me on...</h3>
                         <ul class="list-inline">
                           <li>
-                            <button type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-spotify social"></span></button>
+                            <a href="https://play.spotify.com/user/kev2480" target="_blank" type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-spotify social"></span></a>
                           </li>
                           <li>
-                            <button type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-twitter social"></span></button>
+                            <a href="https://twitter.com/kev2480" target="_blank" type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-twitter social"></span></a>
                           </li>
                           <li>
-                            <button type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-linkedin social"></span></button>
+                            <a href="https://www.linkedin.com/in/kevin-borrill-60750764" target="_blank" type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-linkedin social"></span></a>
                           </li>
                           <li>
-                            <button type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-github social"></span></button>
+                            <a href="http://github.com/kev2480" target="_blank" type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-github social"></span></a>
                           </li>
                           <li>
-                            <button type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-camera social"></span></button>
+                            <a href="http://kevbphotos.tumblr.com" target="_blank" type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-camera social"></span></a>
                           </li>
                         </ul>
                     </div>
