--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </a>
             </div>
             <div class="col-sm-4 portfolio-item">
-             <a href="#">
+             <a href="#festivalModal" data-toggle="modal">
                 <img src="img/portfolio/festival_logo.png" class="img-responsive img-rounded swing" alt="Festival mobile">
                 <h3> Festivals straight to mobile! </h3>
               </a>
@@ -194,6 +194,69 @@
                     </div>
                 </div>
       </footer>
+
+
+
+<!-- Festival modal -->
+
+<div class="portfolio-modal modal fade text-center" id="festivalModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Festival</h2>
+                            <span class=" fa fa-mobile fa-3x"></span></br>
+                            <a href="img/portfolio/festival.png" target="_blank"><img src="img/portfolio/festival.png" class="img-responsive img-centered img-rounded" alt="Festival poster"></a>
+                            <a href="resources/festival.pdf" target="_blank" type="button"><span class="fa fa-fw fa-cloud-download social"></span>Download my dissertation!</a>
+                            <p>The idea came up from this project when I noticed an annoying problem at the<a href="http://www.boardmasters.co.uk/" style="padding:0;" target="_blank"> Boardmasters festival</a> in Newquay 2014.
+                              It became apparent that after a storm had hit the festival the sunday had been cancelled. A <strong style="padding:0;">problem</strong> quickly developed, there were large queues of people trying to enter the festival
+                              from rumours spreading that it might still be on.</p>
+                            <p>Now if only there had been a quick and easy way for a small festival such as Boardmasters to send out a quick notification to everyone confirming
+                              the festival was over...</p>
+                            <p>As part of my final year project I took on the challenge to develop a new way for small festivals to quickly publish and update mapping/line up and news straight to a festival goer's mobile device.
+                            </br> This was an eye openning experience for me as it helped me understand how the power of the web and smart phones can deliver useful information to users.</p>
+                            <h3>Technologies</h3>
+                            <ul class="list-inline item-details">
+                                <li>
+                                  <strong>Amazon Web Services</strong>
+                                  </br> (S3, RDS, EC2)
+                                </li>
+                                <li>
+                                  <strong>Developed with JAVA</strong>
+                                  </br> Desktop application & Web service
+                                </li>
+                                <li>
+                                  <strong>Android Development</strong>
+                                  </br> Mobile application
+                                </li>
+                                <li>
+                                  <strong>Google Cloud messaging</strong>
+                                  </br> To notify mobile users of new information
+                                </li>
+                                <li>
+                                  <strong>MySql</strong>
+                                  </br> Relational Database to store users and festivals
+                                </li>
+                                <li>
+                                  <strong>JSON</strong>
+                                </br> Used alongside a RESTful web service for easy data transmission
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+  </div>
+
 </body>
 
 </html>
