Fix photos link

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div><!-- Row -->
 
         <div class="row">
-          <a href="#" target="_blank">
+          <a href="http://photos.kevinborrill.co.uk/" target="_blank">
           <div class="col-sm-4 portfolio-item">
             <img src="img/portfolio/pictures/gus.jpg" class="img-responsive img-rounded" alt="Socket.io and Node.js chat">
           </div>
@@ -188,7 +188,7 @@
                             <a href="http://github.com/kev2480" target="_blank" type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-github social"></span></a>
                           </li>
                           <li>
-                            <a href="http://kevbphotos.tumblr.com" target="_blank" type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-camera social"></span></a>
+                            <a href="http://photos.kevinborrill.co.uk/" target="_blank" type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-camera social"></span></a>
                           </li>
                         </ul>
                     </div>
