--- a/index.html
+++ b/index.html
@@ -142,8 +142,18 @@
 
         <div class="row">
           <div class="col-sm-8 portfolio-item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <p><strong> I love </strong>how technology can be used to make even a single person's life better. From a young age I've been infactuated with how things work
+            and how parts work together to make a useful thing, for instance, on their own, wheels, an engine, petrol, a chassis, axels and a drivetrain are pretty useless. Working together they make
+            something incredible, a car that can get you across the country in a day!</p>
 
+            <p> The same goes with the web, mobile devices and computers. On their own, yeah, they can be pretty fun, but together they have the power to transform our lifes. They deliver content right around the world,
+              connect people and a whole host of other things. This is why I really enjoy looking at the whole nuts and bolts of comuters and programming languages, as well as web services that connect us all together
+              without us even realising.</p>
+
+            <p> That sums up about my passion for technology. What about everything else? Well. I'm from Poole in Dorset. I have a first in Computing (with honours) from the <a href="https://www.plymouth.ac.uk/">University of Plymouth.</a>
+                I have a great bunch of friends and an amazing girlfriend. I love hanging out with them all and going on adventures! As well as this I'm also involved with the scouting movement!</p>
+
+            <p> Want to find out more? Get in contact! See the footer for my social medias and email address!</p>
           </div>
           <div class="col-sm-4 portfolio-item">
             <a class="twitter-timeline" href="https://twitter.com/kev2480" data-widget-id="722421660863852545">Tweets by @kev2480</a>
