Typo fix, about me

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="row">
           <div class="col-sm-8 portfolio-item">
             <p><strong> I love </strong>how technology can be used to make even a single person's life better. From a young age I've been infactuated with how things work
-            and how parts work together to make a useful thing, for instance, on their own, wheels, an engine, petrol, a chassis, axels and a drivetrain are pretty useless. Working together they make
+            and how parts work together to make a useful thing. For instance, on their own, wheels, an engine, petrol, a chassis, axels and a drivetrain are pretty useless. Working together they make
             something incredible, a car that can get you across the country in a day!</p>
 
             <p> The same goes with the web, mobile devices and computers. On their own, yeah, they can be pretty fun, but together they have the power to transform our lifes. They deliver content right around the world,
