Update font awesome and add more socials

--- a/index.html
+++ b/index.html
@@ -200,6 +200,12 @@
                           <li>
                             <a href="http://photos.kevinborrill.co.uk/" target="_blank" type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-camera social"></span></a>
                           </li>
+                          <li>
+                            <a href="https://www.instagram.com/kev2480/" target="_blank" type="button" class="btn btn-default btn-round"><span class="fa fa-fw fa-instagram social"></span></a>
+                          </li>
+                          <li>
+                            <a href="#snapcode" target="_blank" type="button" class="btn btn-default btn-round"  data-toggle="modal" ><span class="fa fa-fw fa-snapchat social"></span></a>
+                          </li>
                         </ul>
                     </div>
                 </div>
@@ -266,6 +272,26 @@
             </div>
         </div>
   </div>
+
+  <div class="portfolio-modal modal fade text-center" id="snapcode" tabindex="-1" role="dialog" aria-hidden="true">
+          <div class="modal-content">
+              <div class="close-modal" data-dismiss="modal">
+                  <div class="lr">
+                      <div class="rl">
+                      </div>
+                  </div>
+              </div>
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-8 col-lg-offset-2">
+                          <p> Scan my snapcode or add kev2480 </p>
+                          <img src="img/snapcode.png" style="max-width:512px;" class="img-responsive img-rounded" alt="Snapcode">
+                      </div>
+                  </div>
+              </div>
+              <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+          </div>
+    </div>
 
 </body>
 
