--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                   <div class="row">
                       <div class="col-lg-8 col-lg-offset-2">
                           <p> Scan my snapcode or add kev2480 </p>
-                          <img src="img/snapcode.png" style="max-width:512px;" class="img-responsive img-rounded" alt="Snapcode">
+                          <img src="img/snapcode.png" class="img-responsive img-rounded" alt="Snapcode">
                       </div>
                   </div>
               </div>
