--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
 
         <div class="row">
           <div class="col-sm-8 portfolio-item">
-            <p><strong> I love </strong>how technology can be used to make even a single person's life better. From a young age I've been infactuated with how things work
+            <p><strong> I love </strong>how technology can be used to make even a single person's life better. From a young age I've been infatuated with how things work
             and how parts work together to make a useful thing. For instance, on their own, wheels, an engine, petrol, a chassis, axels and a drivetrain are pretty useless. Working together they make
             something incredible, a car that can get you across the country in a day!</p>
 
-            <p> The same goes with the web, mobile devices and computers. On their own, yeah, they can be pretty fun, but together they have the power to transform our lifes. They deliver content right around the world,
-              connect people and a whole host of other things. This is why I really enjoy looking at the whole nuts and bolts of comuters and programming languages, as well as web services that connect us all together
+            <p> The same goes with the web, mobile devices and computers. On their own, yeah, they can be pretty fun, but together they have the power to transform our lives. They deliver content right around the world,
+              connect people and a whole host of other things. This is why I really enjoy looking at the whole nuts and bolts of computers and programming languages, as well as web services that connect us all together
               without us even realising.</p>
 
             <p> That sums up about my passion for technology. What about everything else? Well. I'm from Poole in Dorset. I have a first in Computing (with honours) from the <a href="https://www.plymouth.ac.uk/">University of Plymouth.</a>
@@ -232,12 +232,12 @@
                             <a href="img/portfolio/festival.png" target="_blank"><img src="img/portfolio/festival.png" class="img-responsive img-centered img-rounded" alt="Festival poster"></a>
                             <a href="resources/festival.pdf" target="_blank" type="button"><span class="fa fa-fw fa-cloud-download social"></span>Download my dissertation!</a>
                             <p>The idea came up from this project when I noticed an annoying problem at the<a href="http://www.boardmasters.co.uk/" style="padding:0;" target="_blank"> Boardmasters festival</a> in Newquay 2014.
-                              It became apparent that after a storm had hit the festival the sunday had been cancelled. A <strong style="padding:0;">problem</strong> quickly developed, there were large queues of people trying to enter the festival
+                              It became apparent that after a storm had hit the festival the Sunday had been cancelled. A <strong style="padding:0;">problem</strong> quickly developed, there were large queues of people trying to enter the festival
                               from rumours spreading that it might still be on.</p>
                             <p>Now if only there had been a quick and easy way for a small festival such as Boardmasters to send out a quick notification to everyone confirming
                               the festival was over...</p>
                             <p>As part of my final year project I took on the challenge to develop a new way for small festivals to quickly publish and update mapping/line up and news straight to a festival goer's mobile device.
-                            </br> This was an eye openning experience for me as it helped me understand how the power of the web and smart phones can deliver useful information to users.</p>
+                            </br> This was an eye opening experience for me as it helped me understand how the power of the web and smart phones can deliver useful information to users.</p>
                             <h3>Technologies</h3>
                             <ul class="list-inline item-details">
                                 <li>
