--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                             <h2>Festival</h2>
                             <span class=" fa fa-mobile fa-3x"></span></br>
                             <a href="img/portfolio/festival.png" target="_blank"><img src="img/portfolio/festival.png" class="img-responsive img-centered img-rounded" alt="Festival poster"></a>
-                            <a href="resources/festival.pdf" target="_blank" type="button"><span class="fa fa-fw fa-cloud-download social"></span>Download my dissertation!</a>
+                            <a href="resources/festival.pdf" target="_blank" type="button"><span class="fa fa-fw fa-cloud-download" style="padding-right:20px;"></span>Download my dissertation!</a>
                             <p>The idea came up from this project when I noticed an annoying problem at the<a href="http://www.boardmasters.co.uk/" style="padding:0;" target="_blank"> Boardmasters festival</a> in Newquay 2014.
                               It became apparent that after a storm had hit the festival the Sunday had been cancelled. A <strong style="padding:0;">problem</strong> quickly developed, there were large queues of people trying to enter the festival
                               from rumours spreading that it might still be on.</p>
