Update chat link

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 
           <div class="row">
             <div class="col-sm-4 portfolio-item">
-              <a href="http://kev2480.github.io/Simple-Ruby-Phonebook/" target="_blank" >
+              <a href="http://www.kevinborrill.co.uk/Simple-Ruby-Phonebook/" target="_blank" >
                 <img src="img/portfolio/ruby.png" class="img-responsive img-rounded swing" alt="Simple Ruby phonebook">
 
                 <h3> Simple Ruby Phone book </h3>
               </a>
             </div>
             <div class="col-sm-4 portfolio-item">
-              <a href="https://github.com/kev2480/Socket-Chat-Example" target="_blank" >
+              <a href="http://www.kevinborrill.co.uk/Socket-Chat-Example/" target="_blank" >
                 <img src="img/portfolio/nodejs.png" class="img-responsive img-rounded swing" alt="Socket.io and Node.js chat">
                 <h3> Node.js / Socket.io / Angular.js Chat application </h3>
               </a>
