Add Playlist Panda

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
                 <h3> Festivals straight to mobile! </h3>
               </a>
             </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12 portfolio-item">
+              <a href="http://www.kevinborrill.co.uk/3sc-javascript-task" target="_blank" >
+                <img src="img/portfolio/backbone.png" class="img-responsive img-rounded swing" alt="Socket.io and Node.js chat">
+                <h3> Playlist Panda, a Playlist tool built with Backbone.js</h3>
+              </a>
+            </div>
           </div><!-- Row -->
 
         </div><!-- Container -->
