--- a/index.html
+++ b/index.html
@@ -84,10 +84,16 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-12 portfolio-item">
+            <div class="col-sm-6 portfolio-item">
               <a href="http://www.kevinborrill.co.uk/3sc-javascript-task" target="_blank" >
-                <img src="img/portfolio/backbone.png" class="img-responsive img-rounded swing" alt="Socket.io and Node.js chat">
-                <h3> Playlist Panda, a Playlist tool built with Backbone.js</h3>
+                <img src="img/portfolio/backbone.png" class="img-responsive img-rounded swing" alt="Playlist Panda">
+                <h3> Playlist Panda, a Playlist tool made with Backbone.js</h3>
+              </a>
+            </div>
+            <div class="col-sm-6 portfolio-item">
+              <a href="http://www.kevinborrill.co.uk/Expense-Tracker" target="_blank" >
+                <img src="img/portfolio/expense.png" class="img-responsive img-rounded swing" alt="Expense Tracker">
+                <h3> Expense Tracker, made with Backbone.js and built with Webpack</h3>
               </a>
             </div>
           </div><!-- Row -->
