--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive img-circle profile-img" src="img/profile.png" alt="">
+                    <img class="img-responsive img-circle profile-img" src="https://www.gravatar.com/avatar/a05b8e4c3c7acac2322dc397b60e2945?s=300" alt="">
                     <div class="intro-text">
                         <span class="name">Kevin Borrill</span>
                         <span class=" fa fa-desktop fa-3x"></span></br>
