--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,7 +42,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive img-circle profile-img" src="https://www.gravatar.com/avatar/a05b8e4c3c7acac2322dc397b60e2945?s=300" alt="">
                     <div class="intro-text">
-                        <span class="name">Kevin Borrill</span>
+                        <span class="name"><h1>Kevin Borrill</h1></span>
                         <span class=" fa fa-desktop fa-3x"></span></br>
                         <span class="skills">I like to code things!</span>
                     </div>
